[S41] DB migration complete: disc_validation.db Phase 2b+3, component_library.db cleanup (81→23 tables)
Phase 2b: MEPAD, MEPBOMResolver, ManifestResolver → disc_validation.db (was bom.db)
Phase 3: Dropped 58 tables from component_library.db (232→214 MB)
Specs updated: DISC_VALIDATION_DB_SRS §6, DATA_MODEL, SourceCodeGuide (3→4-DB architecture)
Doc consolidation: 3 docs archived, INDEX.md added, all 39 active docs cross-linked
Assembly builder + infra rules + migrations included
248/248 Designer + 19/19 BackOffice all green

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>